--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -126,7 +126,7 @@ contact_links = [
 sharing_image = "desert.jpg"
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = "edoardo_debe"
+twitter = "juusechec"
 
 ############################
 ## Regional Settings
