--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -85,7 +85,7 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", content_dir 
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "edoardo.m.debenedetti@gmail.com"
+email = ""
 phone = ""
 
 # Address
