--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -110,9 +110,9 @@ appointment_url = ""
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
   {icon = "github", icon_pack = "fab", name = "Check out some code", link = "https://github.com/juusechec"},
-  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/edoardo_debe"},
+  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/juusechec"},
   {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/juusechec"},
-  {icon = "instagram", icon_pack = "fab", name = "See some pictures of my travels", link = "https://instagram.com/edoardo.debenedetti"},
+  {icon = "instagram", icon_pack = "fab", name = "See some pictures of my travels", link = "https://instagram.com/juusechec"},
   # {icon = "skype", icon_pack = "fab", name = "Skype Me", link = ""},
   # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
